feat: add database functionality and controllers for my routes

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <button tabindex="-1" class="link"><a href="/">Go Back Home</a></button>
+  <a href="/" class="link"><button tabindex="-1">Go Back Home</button></a>
   <form method="POST" action="/new">
     <legend><h3>New Post</h3></legend>
     <label for="username">Username</label>
