--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -33,7 +33,6 @@ textarea, input[type="text"] {
 .link, button {
   background-color: antiquewhite;
   padding: 10px 20px;
-  margin: 15px;
   font-size: large;
   border-radius: 40px;
   text-decoration: none;
@@ -43,6 +42,7 @@ textarea, input[type="text"] {
   position: absolute;
   top: 10px;
   left: 10px;
+  padding: 0;
 }
 
 .link:hover, button:hover {
