--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,24 +1,3 @@
-.link {
-  background-color: antiquewhite;
-  padding: 10px 20px;
-  margin: 15px;
-  font-size: large;
-  border-radius: 40px;
-  text-decoration: none;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.link:hover, .link:focus {
-  background-color: #ddd;
-}
-
-.link a {
-  text-decoration: none;
-  color: black;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -78,4 +57,28 @@ li:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.link, button {
+  background-color: antiquewhite;
+  padding: 10px 20px;
+  font-size: large;
+  border-radius: 40px;
+  text-decoration: none;
+}
+
+.link {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding: 0;
+}
+
+.link:hover, button:hover {
+  background-color: #ddd;
+}
+
+.link a {
+  text-decoration: none;
+  color: black;
 }
