--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -3,33 +3,37 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  flex-direction: column;
-  align-items: start;
   max-height: 100vh;
   box-sizing: border-box;
   max-width: 100vw;
 }
 
 .content {
+  box-sizing: border-box;
   background: #fff;
   padding: 20px;
   margin: 15px auto;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  max-width: 500px;
+  width: max(400px, 50vw);
+  max-width: 96vw;
   max-height: calc(100vh - 30px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  gap: 10px;
+  gap: 15px;
   overflow-y: auto;
+}
+
+li a {
   box-sizing: border-box;
+  padding: 20px;
+  width: 100%;
 }
 
 li {
   background: #fff;
-  padding: 20px;
   margin: 15px auto;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
@@ -47,16 +51,28 @@ a {
   color: black;
 }
 
-li:hover,
-li:focus {
+.userStats:hover,
+.userStats:focus-within {
   background-color: gainsboro;
 }
 
 .message {
-  margin: 15px auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: x-large;
+}
+
+.messagesContent {
+  margin-top: 50px;
+}
+
+hr {
+  width: 100%;
+  border: 0;
+  height: 2px;
+  background: #ccc;
 }
 
 .link, button {
@@ -81,4 +97,42 @@ li:focus {
 .link a {
   text-decoration: none;
   color: black;
+}
+
+ul {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+.flexRow {
+  display: flex;
+  gap: 10px;
+}
+
+.spaceBetween {
+  justify-content: space-between;   
+}
+
+.statBody {
+  display: flex;
+  flex-direction: column;
+}
+
+.date {
+  font-style: italic;
+  font-weight: 100;
+  transform: translate(12px, -15px);
+  font-size: medium;
+}
+
+.widthMax {
+   width: 100%;
+   justify-content: space-between;
+}
+
+p {
+width: 100%;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
